--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,22 @@
     package="com.ninjakod.recyclerviewdemo">
 
     <application
+        android:name=".RoomDemoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.ListActivity">
+        <activity android:name=".list.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".view.DetailActivity"/>
+        <activity android:name=".detail.DetailActivity" />
+        <activity android:name=".create.CreateActivity"></activity>
     </application>
 
 </manifest>
