--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,34 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        //VPI
+        maven { url "https://jitpack.io" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    //build
+    minSdkVersion = 16
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.2'
+
+    //3rd party
+    picassoVersion = '2.5.2'
+    circleImageViewVersion = '2.1.0'
+    viewPagerIndicatorVersion = '2.4.1'
+    daggerVersion = '2.13'
+
+    //android
+    supportLibraryVersion = '26.1.0'
+    constraintLayoutVersion = '1.1.0'
+    archLifecycleVersion = '1.1.1'
+    archLifecycleCompilerVersion = '1.0.0'
+    archLifecycleExtensionsVersion = '1.1.1'
+    roomVersion = '1.0.0'
+
 }
